# haskell-workshop

./: .gitignore  Cheatsheet.adoc  Einfuehrung.md  Hints.md  Introduction.pptx  README.html  README.md  Syntax.md  hie.yaml  package.yaml  stack.yaml  workshop.cabal
.github/workflows/: gh_pages.yml
app/: Hangman.hs  Main.hs  Mastermind.hs  Server.hs
docs/: Einfuehrung.md  Hints.md  README.adoc  Syntax.md
public/: index.html
src/: CommandLine.hs  Hangman.hs  Lib.hs  Syntax.hs  Web.hs
src/CommandLine/: Types.hs
src/Hangman/: GameState.hs  Program.hs
src/Mastermind/: GameState.hs  Program.hs
src/Syntax/: Ex1.hs  Examples.hs
src/TicTacToe/: GameState.hs
src/Uno/: Card.hs
test/: HangmanSpec.hs  LibSpec.hs  MastermindSpec.hs  Spec.hs
