cabal-version:      3.6
name:               workshop
version:            0.1.0.0
description:
  Please see the README on GitHub at <https://github.com/githubuser/workshop#readme>

homepage:           https://github.com/githubuser/workshop#readme
bug-reports:        https://github.com/githubuser/workshop/issues
author:             Author name here
maintainer:         example@example.com
copyright:          2022 Author name here
license:            BSD-3-Clause
build-type:         Simple
extra-source-files: README.md

source-repository head
  type:     git
  location: https://github.com/githubuser/workshop

common common-build-config
  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wpartial-fields -Widentities -Wredundant-constraints

  default-extensions:
    NoImplicitPrelude
    LambdaCase
    NamedFieldPuns
    OverloadedStrings
    StrictData

  default-language:   GHC2021

library
  import:          common-build-config
  exposed-modules: Hangman
  hs-source-dirs:  src
  build-depends:
    , base                  >=4.7 && <5
    , basic-prelude
    , bytestring
    , containers
    , QuickCheck
    , random
    , text
    , unordered-containers

executable workshop-exe
  import:         common-build-config
  main-is:        Main.hs
  hs-source-dirs: app
  build-depends:
    , base      >=4.7 && <5
    , workshop

  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

test-suite workshop-test
  import:         common-build-config
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  other-modules:  LibSpec
  hs-source-dirs: test
  build-depends:
    , base           >=4.7 && <5
    , basic-prelude
    , hspec
    , workshop

  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
